test/tests/compiler/1_int_constants/invalid_parse/not_expression.plx
pub fn main(none) i32 {
    return i32
}
